@@ -1,6 +1,8 @@
 Revision history for Perl extension TAP::Formatter::JUnit.
 
 0.08    ???
+    - RT#58838, "Error reporting on die or missing plan".  Thanks to Colin
+      Robertson.  Output compatible w/Hudson (so it now sees these as errors).
 
 0.07    Fri Jan 29 23:23 PST 2010
     - Fix RT#53927, "Times reported by T:F:JUnit for individual test cases in
